change city to world

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h3 class="h3tag" >My h3 tag</h3>
         <h3 class="h3tag" >My h3 tag</h3>
         <h3 class="h3tag" >My h3 tag</h3>
-        <div id="myDiv">hello city</div>
+        <div id="myDiv">hello world</div>
         <button onclick="changeColor()">change color</button>
     </header>
 
