--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <h3 class="h3tag" >My h3 tag</h3>
         <h3 class="h3tag" >My h3 tag</h3>
         <div id="myDiv">hello city</div>
+        <div id="myDiv">hello Udgir</div>
         <button onclick="changeColor()">change color</button>
     </header>
 
